@@ -1,7 +1,0 @@
-#ifndef _ECA_SFX_IMPL_H
-#define _ECA_SFX_IMPL_H
-
-#define EI_PM_PASSIVE   0
-#define EI_PM_ACTIVE    1
-
-#endif
